--- a/html/nav.html
+++ b/html/nav.html
@@ -10,7 +10,7 @@
             <li class="nav-item"><a class="nav-link" href="../../index.php">Accueil</a></li>
             <li class="nav-item"><a class="nav-link" href="../habitats.php">Habitats</a></li>
             <li class="nav-item"><a class="nav-link" href="../services.php">Services</a></li>
-            <li class="nav-item"><a class="nav-link" href="../php/animal.php">Animaux</a></li>
+            <li class="nav-item"><a class="nav-link" href="../animal.php">Animaux</a></li>
             <li class="nav-item"><a class="nav-link" href="../contact.php">Contact</a></li>
             <li class="nav-item"><a class="nav-link btn btn-outline-primary" href="../login.php">Connexion</a></li>
         </ul>
